--- a/style.css
+++ b/style.css
@@ -4,3 +4,96 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css");
 /* importanto para icones, do cdnjs.com/libraries/font-awesome */
 
+*{ /*para todos os elementos do documento*/
+    margin: 0;
+    padding: 0;
+}
+header{
+    width: 100%;
+    height: 100vh; /*altura da view, pagina inicial*/
+    overflow: hidden; /*nao deixa que cria barra de rolagem caso fique maior que a tela*/
+    position: relative; /*permite que tudo dentro seja relativo*/
+}
+
+.img-wrapper{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.8); 
+}
+
+.img-wrapper img{ /*forca a ficar dentro do img-wrapper*/
+    width: 100%; 
+    height: 100%;
+    object-fit: cover; /*a imagem cobre a div, permite ser cortada pelos cantos de tela*/
+    opacity: 0.5;
+    animation: zoom 25s;
+}
+
+@keyframes zoom {
+    0%{
+        transform: scale(1.3); /*zom de 30%*/
+    }
+    100%{
+        transform: scale(1); /*retorna pra 100*/
+    }
+}
+
+.banner{
+    position: absolute; /*necessita do position-relative do seu pai header*/
+    top: 30%;
+    left: 15%;
+}
+
+.banner h1{
+    color: #ffffff;
+    font-size: 3.5rem; /*permite alterar o tamanho quando der zoom, atraves dos elemento padrao(pai)*/
+    font-family: "Baloo Da 2", serif;
+    font-weight: 200;
+    text-shadow: .2rem .3rem 2px rgba(0, 0, 0, 0.4);
+    line-height: 3.5rem; /*para determinar o distancimento da linha*/
+    margin-bottom: 2rem; /*como se tivesse uma linha entre*/
+    opacity: 0; /*para a animacao*/
+    animation: moverBanner 1s 0.5s forwards;
+
+}
+
+.banner p{
+    font-family: "Josefin Slab", serif;
+    color: #ffffff;
+    font-size: 2rem;
+    text-shadow: .2rem .2rem rgba(0, 0, 0, 0.4);
+    margin-bottom: 2rem;
+    opacity: 0;
+    animation: moverBanner 1s 0.7s forwards;
+}
+
+.banner button{
+    font-family: "Muli", serif;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem; /*epaçamento de letras*/
+    background: #6a3093; 
+    background: -webkit-linear-gradient(to right, #a044ff, #6a3093);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #a044ff, #6a3093); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding: 1rem 3rem; /*em cima e nos lados*/
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    opacity: 0;
+    animation: moverBanner 1s 0.9s forwards;
+}
+
+.banner button:hover{
+    opacity: 0.8;
+}
+
+@keyframes moverBanner {
+    0%{
+        transform: translateY(10rem) rotateY(-30deg);
+    }
+    100%{
+        transform: translateY(0) rotateY(0);
+        opacity: 1;
+    }
+}
