--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 :root{ /*define algo padrao para o documento HTML*/
     --font-primary: "Baloo Da 2", serif;
     --font-secundary: "Josefin Slab", serif;
-    --font-action: "Muli", serif;
+    --font-action: "Mulish", serif;
 }
 
 .hamburguer{
@@ -29,7 +29,7 @@
     flex-direction: column; /*vai ser em coluna, uma abaqixo do outro*/
     justify-content: space-evenly; /*espalha os elementos*/
     cursor: pointer; /*cursor mãozinha*/
-    
+   
 }
 
 .show-menu .hamburguer{ /*desc de show, tem essa forma se deu mudanaça pelo JS*/
@@ -58,7 +58,6 @@
     background-color: black;
     box-shadow: none;
     transform: rotate(-45deg) translate(.3rem, -.47rem);
-   
 }
 
 .hamburguer span{
@@ -77,7 +76,7 @@
 
 .hamburguer span::before{ /*pseudo elemento, cria a pequena flecha*/
     content: "";
-    position: absolute;
+    position: absolute; 
     border-right: .5rem solid #a044ff;
     border-top: .5rem solid transparent;
     border-left: .5rem solid transparent;
@@ -153,7 +152,7 @@ header{
     color: #ffffff;
     text-transform: uppercase;
     letter-spacing: 0.1rem; /*epaçamento de letras*/
-    background: #6a3093; 
+    background: #6a3093; /*tirado de site de fundos*/
     background: -webkit-linear-gradient(to right, #a044ff, #6a3093);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #a044ff, #6a3093); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     padding: 1rem 3rem; /*em cima e nos lados*/
@@ -238,4 +237,347 @@ header{
 
 .social-media i:hover{
     background-color: #a044ff;
+}
+
+.conhecimentos{ /*o modo de exibição se torna em formato de tabela*/
+    display: grid;
+    grid-template-columns: repeat(16, 1fr); /*16 colunas, repetindo cada uma no caso cada frame */
+    grid-template-rows: repeat(6, 6rem); /*6 linhas com altura de 4rem*/
+    row-gap: .5rem; /*espaçamento entre cada bloco*/
+}
+
+.conhecimento:nth-child(1){ /*pega o primeiro comnheicmento*/
+    grid-column: 4 / 7 ;  /*começa na coluna 4 e termina na 7*/
+    grid-row: 1 / 3; /*começa na linha 3 e termina na 5*/
+}
+
+.conhecimento:nth-child(2){ /*pega o primeiro comnheicmento*/
+    grid-column: 3 / 6 ;  /*começa na coluna 4 e termina na 7*/
+    grid-row: 3 / 5; /*começa na linha 3 e termina na 5*/
+}
+
+.conhecimento:nth-child(3){ /*pega o primeiro comnheicmento*/
+    grid-column: 4 / 7 ;  /*começa na coluna 4 e termina na 7*/
+    grid-row: 5 / -1; /*começa na linha 3 e termina na 5*/
+}
+
+.conhecimento:nth-child(4){ /*pega o primeiro comnheicmento*/
+    grid-column: 11 / 14 ;  /*começa na coluna 4 e termina na 7*/
+    grid-row: 1 / 3; /*começa na linha 3 e termina na 5*/
+}
+
+.conhecimento:nth-child(5){ /*pega o primeiro comnheicmento*/
+    grid-column: 12 / 15 ;  /*começa na coluna 4 e termina na 7*/
+    grid-row: 3 / 5; /*começa na linha 3 e termina na 5*/
+}
+
+.conhecimento:nth-child(6){ /*pega o primeiro comnheicmento*/
+    grid-column: 11 / 14 ;  /*começa na coluna 4 e termina na 7*/
+    grid-row: 5 / -1; /*começa na linha 3 e termina na 5*/
+}
+
+.sessao-conhecimentos{
+    background-color: #f5f5f5;
+}
+.sessao-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sessao-header h1{
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    color: #4b4b4b;
+    border-bottom: solid 3px #6a3093;
+    margin-bottom: 1.5rem;
+}
+
+.conhecimento-header{
+    display: flex; /*de auto, fica um ao lado do outro*/
+    align-items: center;
+    color: #4b4b4b;
+}
+
+.conhecimento-header i{ 
+    font-size: 2.5rem;
+}
+
+.conhecimento-header h3{
+    font-family: var(--font-secundary);
+    font-size: 2rem;
+    padding-left: 1rem;
+}
+
+.conhecimento-text{
+    font-family: var(--font-secundary);
+    margin-top: 1rem;
+}
+
+.conhecimentos-img-wrapper{
+    grid-column: 7 / 11;
+    grid-row: 2 / 6;
+    width: 100%;
+}
+
+.conhecimentos-img-wrapper img{
+    object-fit: cover; /*faz o redimensionamento na imagem de modo que esta não seja cortada e seja mostrada completamente dentro da área definida pelas dimensões especificadas.*/
+    width: 100%;
+}
+
+.projetos{
+    display: flex;
+    justify-content: space-evenly; /*sepra igualmente cada item*/
+}
+
+.card{
+    width: 18rem;
+    height: 25rem;
+    position: relative;
+}
+
+.card-img-wrapper{
+    width: 100%;
+    height: 100%;
+    background-color: #262626;
+    border-radius: .5rem;
+
+}
+
+.card-img-wrapper img{
+    object-fit: cover; /*tira o zoom da imagem, deixando do tamanho do elemento*/
+    width: 100%;
+    height: 100%;
+    border-radius: .5rem;
+    opacity: .8;
+    transition: opacity .3s;
+}
+
+.card:hover .card-img-wrapper img{
+    opacity: .5;
+}
+
+.card-info{
+    position: absolute;
+    bottom: 0;
+    opacity: 0;
+    visibility: hidden;
+    padding: 2rem;
+    text-shadow: 0.3 0.2rem 0.3rem rgba(0, 0, 0, 0.6);
+    transition: all .3s; /*para todos as propriedades*/
+}
+
+.card-info h2{
+    font-family: var(--font-primary);
+    font-size: 2rem;
+    font-weight: 500; /*define o peso da font ou espessurra*/
+    color: #eee;
+}
+
+.card-info h3{
+    font-family: var(--font-action);
+    font-weight: bolder;
+    color: #ff4081;
+    margin-bottom: 1.5rem;
+}
+
+.card-info p{
+    font-family: var(--font-secundary);
+    color: #eee;
+    font-weight: 400;
+    width: 80%;
+    margin-bottom: 2rem;
+   
+}
+
+.btn{ /*crio uma classe*/
+    background: #6a3093;
+    background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+    background: linear-gradient(to right, #a044ff, #6a3093);
+    font-family: var(--font-action);
+    color: #eee;
+    border-radius: .5rem;
+    border: none;
+    box-shadow: 0 .1rem .8rem rgba(0, 0, 0, 0.4);
+}
+.card-info button{
+    width: 8rem;
+    height: 2.5rem;
+
+}   
+
+.card:hover .card-info{
+    bottom: 2rem;
+    opacity: 1;
+    visibility: visible;
+}
+
+.sessao-contato{
+    width: 100%;
+    height: 100vh;
+    margin-top: 2rem;
+    background-color: #272727;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contato-wrapper{
+    width: 60%;
+    height: 35rem;
+    display: flex;
+    box-shadow: 0 2rem 3rem rgb(0, 0, 0, 0.5); /*impressao de que esta sobre o fundo*/
+}
+
+.contato-left{
+    width: 35%;     /*para degrade    vai de...             ate... */
+    background: linear-gradient(rgba(15,15,15, 0.6),rgba(22,22,22, 0.9)),url(Imagens/contato.jpg);
+    background-size: cover;
+}
+
+.contato-right{
+    width: 65%;
+    background-color: #eee;
+    padding: 1rem 3rem 3rem 3rem;
+}
+
+.sessao-contato h1{
+    width: 100%;
+    text-align: center;
+    font-family: var(--font-primary);
+    color: #272727;
+    font-size: 3rem;
+    font-weight: lighter;
+}
+
+.sessao-contato form{
+    width: 100%;
+    display: flex; /*deixa um do lado do outro por padrao*/
+    flex-direction: column; /*deixa um acima do outro*/
+    align-items: center; /*centraliza tudo*/
+
+}
+
+.input-group{
+    position: relative;   /*mantem o nome dentro*/
+}
+
+.field{
+    background: transparent;
+    border: none;
+    width: 20rem;
+    font-size: 1.5rem;
+    font-family: var(--font-secundary);
+
+           /*borda pontilhada "dashed"*/
+    border-bottom: 2px dashed #636363;
+    height: 3rem;
+    outline: none; /*linha quando seleciona*/
+    margin: 2rem 0;
+}
+
+.input-group textarea{
+    padding-top: 0.5rem;
+    max-width: 25rem; /*limita o tamnho da caixa de texto*/
+    min-width: 20rem;
+    max-height: 3rem; /*limita o tamnho da caixa de texto*/
+}
+
+
+.field-label{
+    position: absolute;
+    left: 0;
+    top: 2rem;
+    font-size: 1.2rem;
+    font-family: var(--font-secundary);
+    text-transform: uppercase;
+    transition: all 0.3s;
+}
+
+.field:focus ~ label{ /*qualquer field que receber o focus, o labe a seguir (~) volta a ter top de 0*/
+    top: 0;
+    font-size: 1rem;
+}
+
+.field:focus{ /*qualquer field que receber o focus, o labe a seguir (~) volta a ter top de 0*/
+    border-bottom: 1px solid;
+}
+
+.btn-submit{
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    width: 100%;
+    height: 2rem;
+    margin-top: 1rem;
+}
+
+.preenchido{
+    pointer-events: none;
+}
+
+
+.sessao-orcamento{
+    width: 100%;
+    height: 100vh;
+    background: url("Imagens/bg-orcamento.jpg");
+    object-fit: cover; /*a imagem cobre a div, permite ser cortada pelos cantos de tela*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.orcamento-wrapper{
+    width: 60%;
+    height: 80%;
+    background: #ffffff99;
+    border-radius: 10px;
+    box-shadow: 0 0.1rem 0.3rem rgb(0, 0, 0, 0.5);
+    position: relative;
+}
+
+.sessao-orcamento h1{ /*da a impressao de que esta colado no elemto pai*/
+    position: absolute;
+    top: -2.5rem;
+    left: 2rem;
+    background: #6a3093;
+    background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+    background: linear-gradient(to right, #a044ff, #6a3093);
+    padding: 0 3rem;
+    color: #ffffff;
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    font-weight: lighter;
+    box-shadow: 0 0.1rem 0.3rem rgb(0, 0, 0, 0.5);
+    border-radius: 10px;
+}
+
+.sessao-orcamento form{
+    margin: 4rem;
+    display: grid;
+    grid-template-columns: auto 1fr; /*a primeira coluna sera auto do tamanho do conteudo que conter e a 2 ocupra o restanto 1fr*/
+    column-gap: 2rem; /*da espaçamento entre as colunas*/
+    row-gap: 2rem; /*distancia entre as linhas da coluna*/
+}
+
+.sessao-orcamento label{
+    font-family: var(--font-secundary);
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.sessao-orcamento input[type="number"]{ /*somente os inout do tipo texto*/
+    font-family: var(--font-secundary);
+    width: 4rem;
+    font-size: 2rem;
+    outline: none;
+    border-radius: 10px;
+    border: none;
+    padding: 0.3rem;
+}
+
+.btn-orcamento{
+    text-transform: uppercase;
+    padding: 1rem;
+    cursor: pointer;
+    grid-column: 2; /*jogo para a coluna 2*/
 }
