--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@
     --font-action: "Mulish", serif;
 }
 
+html{ /*o comportamento do scroll sera suavizado para a parte de links tambem*/
+    scroll-behavior: smooth;
+}
+
 .hamburguer{
   
     width: 2rem;
@@ -185,6 +189,7 @@ header{
     top: 0;
     right: -20rem; /*joga pra fora da tela*/
     transition: all 1s;
+    z-index: 150; /*faz com que o icone fique a frente de todos*/
 }
 
 .show-menu .sidebar{
@@ -580,4 +585,52 @@ header{
     padding: 1rem;
     cursor: pointer;
     grid-column: 2; /*jogo para a coluna 2*/
+}
+
+footer{
+    width: 100%;
+    height: 7rem;
+    background-color: #17181b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-content{
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-content p{
+    font-family: var(--font-secundary);
+    color: #a7a7a7;
+    font-size: 1.2rem;
+}
+
+.social-list a{
+    margin: 0 2rem;
+    color: #a7a7a7;
+    font-size: 1.3rem;
+}
+
+.social-list ul{
+    display: flex; /*ja deixa um ao lado do outro*/
+}
+
+#link-topo{
+    position: fixed;
+    right: 3rem;
+    bottom: 3rem;
+    width: 3rem;
+    height: 3rem;
+    background: #6a3093;
+    background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+    background: linear-gradient(to right, #a044ff, #6a3093);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border-radius: .3rem;
+    box-shadow: 0 0.1rem 0.6rem #00000009;
 }
